; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/restore/extr_tape.c_skipmaps.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/restore/extr_tape.c_skipmaps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@spcl = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@TS_BITS = common dso_local global i64 0, align 8
@TS_CLRI = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @skipmaps() #0 {
  br label %1

1:                                                ; preds = %11, %0
  %2 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @spcl, i32 0, i32 0), align 8
  %3 = load i64, i64* @TS_BITS, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %9, label %5

5:                                                ; preds = %1
  %6 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @spcl, i32 0, i32 0), align 8
  %7 = load i64, i64* @TS_CLRI, align 8
  %8 = icmp eq i64 %6, %7
  br label %9

9:                                                ; preds = %5, %1
  %10 = phi i1 [ true, %1 ], [ %8, %5 ]
  br i1 %10, label %11, label %13

11:                                               ; preds = %9
  %12 = call i32 (...) @skipfile()
  br label %1

13:                                               ; preds = %9
  ret void
}

declare dso_local i32 @skipfile(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
